fixed height on firefox

--- a/landing_style.css
+++ b/landing_style.css
@@ -55,7 +55,7 @@ html,body {
     display: table-cell;
     vertical-align: middle;
     width: 100%;
-    height: 100%;
+    height: calc(100vh - 100px);
     max-width: none;
   }
   .content{
